test/libsolidity/syntaxTests/errors/error_reserved_name.sol
error Error(uint);
// ----
// SyntaxError 1855: (0-18): The built-in errors "Error" and "Panic" cannot be re-defined.
